fix: 로그아웃 스왈 모달 z-index

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -772,3 +772,7 @@ body {
     right: -10px !important; /* 화면 너비가 700px 이하일 때 */
   }
 }
+
+.custom-swal-zindex {
+  z-index: 1050 !important; /* 원하는 z-index 값 설정 */
+}
